# libipc

./: .gitignore  CMakeLists.txt  README.md
include/ipc/: error.h  pipe.h  socket.h  thread.h
src/: CMakeLists.txt  error.c  pipe.c  platform.c  platform.h  socket.c  thread.c
src/unix/: platform.c  platform.h
src/win32/: CMakeLists.txt  platform.c  platform.h  socket.c
test/: CMakeLists.txt  client.c  pipe.c  server.c  socket.c  socket_connect.c  socket_init.c  socket_is_connected.c  thread.c  util.h
